--- a/App/Views/Pages/FileSyncListMainPage.xaml
+++ b/App/Views/Pages/FileSyncListMainPage.xaml
@@ -6,7 +6,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:models="using:Coder.Desktop.App.Models"
+    xmlns:viewmodels="using:Coder.Desktop.App.ViewModels"
     xmlns:converters="using:Coder.Desktop.App.Converters"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -126,8 +126,9 @@
                         </ItemsRepeater.Layout>
 
                         <ItemsRepeater.ItemTemplate>
-                            <DataTemplate x:DataType="models:SyncSessionModel">
-                                <Grid Margin="0,10">
+                            <DataTemplate x:DataType="viewmodels:SyncSessionViewModel">
+                                <!-- DataContext is set here so we can listen to DataContextChanged below -->
+                                <Grid Margin="0,10" DataContext="{x:Bind Model, Mode=OneWay}">
                                     <!-- These are (mostly) from the header Grid and should be copied here -->
                                     <Grid.Resources>
                                         <Style TargetType="Border">
@@ -145,11 +146,18 @@
 
                                     <Border Grid.Column="0" Padding="0" HorizontalAlignment="Right">
                                         <StackPanel Orientation="Horizontal">
-                                            <HyperlinkButton Padding="0" Margin="0,0,5,0">
-                                                <FontIcon Glyph="&#xE769;" FontSize="15"
+                                            <HyperlinkButton
+                                                Padding="0"
+                                                Margin="0,0,5,0"
+                                                Command="{x:Bind PauseOrResumeSessionCommand}">
+
+                                                <FontIcon Glyph="{x:Bind Icon}" FontSize="15"
                                                           Foreground="{ThemeResource DefaultTextForegroundThemeBrush}" />
                                             </HyperlinkButton>
-                                            <HyperlinkButton Padding="0">
+                                            <HyperlinkButton
+                                                Padding="0"
+                                                Command="{x:Bind TerminateSessionCommand}">
+
                                                 <FontIcon Glyph="&#xF140;" FontSize="15"
                                                           Foreground="{ThemeResource DefaultTextForegroundThemeBrush}" />
                                             </HyperlinkButton>
@@ -157,19 +165,19 @@
                                     </Border>
                                     <Border Grid.Column="1" Padding="10,0,0,0">
                                         <TextBlock
-                                            Text="{x:Bind AlphaPath}"
+                                            Text="{x:Bind Model.AlphaPath}"
                                             TextTrimming="CharacterEllipsis"
                                             IsTextTrimmedChanged="TooltipText_IsTextTrimmedChanged" />
                                     </Border>
                                     <Border Grid.Column="2">
                                         <TextBlock
-                                            Text="{x:Bind BetaName}"
+                                            Text="{x:Bind Model.BetaName}"
                                             TextTrimming="CharacterEllipsis"
                                             IsTextTrimmedChanged="TooltipText_IsTextTrimmedChanged" />
                                     </Border>
                                     <Border Grid.Column="3">
                                         <TextBlock
-                                            Text="{x:Bind BetaPath}"
+                                            Text="{x:Bind Model.BetaPath}"
                                             TextTrimming="CharacterEllipsis"
                                             IsTextTrimmedChanged="TooltipText_IsTextTrimmedChanged" />
                                     </Border>
@@ -177,7 +185,7 @@
                                         <Border.Resources>
                                             <converters:StringToBrushSelector
                                                 x:Key="StatusColor"
-                                                SelectedKey="{x:Bind Path=StatusCategory}">
+                                                SelectedKey="{x:Bind Path=Model.StatusCategory}">
 
                                                 <converters:StringToBrushSelectorItem
                                                     Value="{ThemeResource SystemFillColorCriticalBrush}" />
@@ -201,16 +209,25 @@
                                                     Value="{ThemeResource DefaultTextForegroundThemeBrush}" />
                                             </converters:StringToBrushSelector>
                                         </Border.Resources>
+                                        <!--
+                                            We cannot use a direct binding to ToolTipService.ToolTip here because these
+                                            tooltips are populated from computed properties, which seems to cause the
+                                            tooltip to update (and close) even if the text hasn't changed. Since we
+                                            update the sync session state every 5 seconds, this is super annoying.
+                                        -->
                                         <TextBlock
-                                            Text="{x:Bind StatusString}"
+                                            Text="{x:Bind Model.StatusString}"
                                             TextTrimming="CharacterEllipsis"
                                             Foreground="{Binding Source={StaticResource StatusColor}, Path=SelectedObject}"
-                                            ToolTipService.ToolTip="{x:Bind StatusDetails}" />
+                                            Loaded="{x:Bind OnStatusTextLoaded}"
+                                            DataContextChanged="{x:Bind OnStatusTextDataContextChanged}" />
                                     </Border>
                                     <Border Grid.Column="5">
+                                        <!-- Same thing happens here as it's also a computed property -->
                                         <TextBlock
-                                            Text="{x:Bind AlphaSize.SizeBytes, Converter={StaticResource FriendlyByteConverter}}"
-                                            ToolTipService.ToolTip="{x:Bind SizeDetails}" />
+                                            Text="{x:Bind Model.AlphaSize.SizeBytes, Converter={StaticResource FriendlyByteConverter}}"
+                                            Loaded="{x:Bind OnSizeTextLoaded}"
+                                            DataContextChanged="{x:Bind OnSizeTextDataContextChanged}" />
                                     </Border>
                                 </Grid>
                             </DataTemplate>
@@ -315,7 +332,7 @@
                             <TextBox
                                 VerticalAlignment="Stretch"
                                 HorizontalAlignment="Stretch"
-                                Text="{x:Bind ViewModel.NewSessionRemoteName, Mode=TwoWay}" />
+                                Text="{x:Bind ViewModel.NewSessionRemoteHost, Mode=TwoWay}" />
                         </Border>
                         <Border Grid.Column="3">
                             <TextBox
