--- a/App/Views/Pages/FileSyncListMainPage.xaml
+++ b/App/Views/Pages/FileSyncListMainPage.xaml
@@ -38,21 +38,27 @@
             <TextBlock HorizontalAlignment="Center" Text="Loading sync sessions..." />
         </Grid>
 
-        <StackPanel
+        <Grid
             Visibility="{x:Bind ViewModel.ShowError, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"
-            Orientation="Vertical"
             Padding="20">
 
-            <TextBlock
-                Margin="0,0,0,20"
-                Foreground="Red"
-                TextWrapping="Wrap"
-                Text="{x:Bind ViewModel.Error, Mode=OneWay}" />
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
 
-            <Button Command="{x:Bind ViewModel.ReloadSessionsCommand, Mode=OneWay}">
+            <ScrollView Grid.Row="0">
+                <TextBlock
+                    Margin="0,0,0,20"
+                    Foreground="Red"
+                    TextWrapping="Wrap"
+                    Text="{x:Bind ViewModel.Error, Mode=OneWay}" />
+            </ScrollView>
+
+            <Button Grid.Row="1" Command="{x:Bind ViewModel.ReloadSessionsCommand, Mode=OneWay}">
                 <TextBlock Text="Reload" />
             </Button>
-        </StackPanel>
+        </Grid>
 
         <!-- This grid lets us fix the header and only scroll the content. -->
         <Grid
@@ -80,7 +86,7 @@
                             <Setter Property="Foreground" Value="{ThemeResource TextFillColorSecondaryBrush}" />
                         </Style>
                         <Style TargetType="Border">
-                            <Setter Property="Padding" Value="40,0,0,0" />
+                            <Setter Property="Padding" Value="30,0,0,0" />
                         </Style>
                     </Grid.Resources>
 
@@ -132,7 +138,7 @@
                                     <!-- These are (mostly) from the header Grid and should be copied here -->
                                     <Grid.Resources>
                                         <Style TargetType="Border">
-                                            <Setter Property="Padding" Value="40,0,0,0" />
+                                            <Setter Property="Padding" Value="30,0,0,0" />
                                         </Style>
                                     </Grid.Resources>
                                     <Grid.ColumnDefinitions>
@@ -266,7 +272,7 @@
                         <!-- These are (mostly) from the header Grid and should be copied here -->
                         <Grid.Resources>
                             <Style TargetType="Border">
-                                <Setter Property="Padding" Value="40,0,0,0" />
+                                <Setter Property="Padding" Value="30,0,0,0" />
                             </Style>
                         </Grid.Resources>
                         <Grid.ColumnDefinitions>
@@ -317,7 +323,7 @@
                                 <Button
                                     Grid.Column="1"
                                     IsEnabled="{x:Bind ViewModel.NewSessionLocalPathDialogOpen, Converter={StaticResource InverseBoolConverter}, Mode=OneWay}"
-                                    Command="{x:Bind OpenLocalPathSelectDialogCommand}"
+                                    Command="{x:Bind ViewModel.OpenLocalPathSelectDialogCommand}"
                                     VerticalAlignment="Stretch">
 
                                     <FontIcon Glyph="&#xE838;" FontSize="13" />
@@ -325,23 +331,36 @@
                             </Grid>
                         </Border>
                         <Border Grid.Column="2">
-                            <!-- TODO: use a combo box for workspace agents -->
-                            <!--
                             <ComboBox
-                                ItemsSource="{x:Bind WorkspaceAgents}"
+                                IsEnabled="{x:Bind ViewModel.NewSessionRemoteHostEnabled, Mode=OneWay}"
+                                ItemsSource="{x:Bind ViewModel.AvailableHosts, Mode=OneWay}"
+                                SelectedItem="{x:Bind ViewModel.NewSessionRemoteHost, Mode=TwoWay}"
+                                ToolTipService.ToolTip="{x:Bind ViewModel.NewSessionRemoteHost, Mode=OneWay}"
                                 VerticalAlignment="Stretch"
                                 HorizontalAlignment="Stretch" />
-                            -->
-                            <TextBox
-                                VerticalAlignment="Stretch"
-                                HorizontalAlignment="Stretch"
-                                Text="{x:Bind ViewModel.NewSessionRemoteHost, Mode=TwoWay}" />
                         </Border>
                         <Border Grid.Column="3">
-                            <TextBox
-                                VerticalAlignment="Stretch"
-                                HorizontalAlignment="Stretch"
-                                Text="{x:Bind ViewModel.NewSessionRemotePath, Mode=TwoWay}" />
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+
+                                <TextBox
+                                    Grid.Column="0"
+                                    Margin="0,0,5,0"
+                                    VerticalAlignment="Stretch"
+                                    Text="{x:Bind ViewModel.NewSessionRemotePath, Mode=TwoWay}" />
+
+                                <Button
+                                    Grid.Column="1"
+                                    IsEnabled="{x:Bind ViewModel.NewSessionRemotePathDialogEnabled, Mode=OneWay}"
+                                    Command="{x:Bind ViewModel.OpenRemotePathSelectDialogCommand}"
+                                    VerticalAlignment="Stretch">
+
+                                    <FontIcon Glyph="&#xE838;" FontSize="13" />
+                                </Button>
+                            </Grid>
                         </Border>
                         <Border Grid.Column="4">
                             <TextBlock
